--- a/honey.html
+++ b/honey.html
@@ -46,7 +46,7 @@
 		<img src="logotype.png" id="slider_logo">
 		<p>Хотите чего-то необычного? Тогда мы можем вам представить наш магазин сладостей, в котором собраны сладости со всего света. Мы предлагаем сладости из Америки, Кореи и Японии.</p>
 	</div>
-	<img src="sweets1.jpeg" class="slider_img_big minimized">
+	<img src="s14.jpeg" class="slider_img_big minimized">
 	<div class="slider_div_with_img_small">
 		<img src="s2.jpeg" class="slider_img_small minimized">
 		<img src="s3.jpeg" class="slider_img_small minimized">
