--- a/honey.html
+++ b/honey.html
@@ -30,9 +30,9 @@
 </head>
 <body>
 <header>
-	<div id="logotipe_with_name">
+	<div id="logotype_with_name">
 		<a href="honey.html"><img src="bokal_crem.png" id="logo"></a>
-		<a href="honey.html"><img src="logotype_white.png" class="logotipe_name"></a>
+		<a href="honey.html"><img src="logotype_white.png" class="logotype_name"></a>
 	</div>
 	<div id="menu">
 		<a href="honey.html">Главная</a>
