--- a/honey.html
+++ b/honey.html
@@ -64,7 +64,7 @@
 		<img src="heart.png" class="icon_near_h1">
 	</div>
 	<div class="div_about_company_div">
-		<img src="s16.jpg" class="img_bestsellers">
+		<img src="s16.jpg" class="img_about_company">
 		<p>Наша компания занимается сладостями со всего света. Мы привозим их со всех уголков нашей планеты. В основном в нашем магазине представлены сладости из Америки, Японии и Кореи. В нашем магазине самые демократичные цены и высокое качество обслуживания покупателей.<br>Наша компания занимается сладостями со всего света. Мы привозим их со всех уголков нашей планеты. В основном в нашем магазине представлены сладости из Америки, Японии и Кореи. В нашем магазине самые демократичные цены и высокое качество обслуживания покупателей.</p>
 	</div>
 </div>
