--- a/honey.html
+++ b/honey.html
@@ -42,7 +42,7 @@
 	<div id="menu">
 		<a href="honey.html">Главная</a>
 		<a href="range.html">Ассортимент</a>
-		<a href="#">Подарочные боксы</a>
+		<a href="gift_boxes.html">Подарочные боксы</a>
 		<a href="#f">Контакты</a>
 	</div>
 </header>
@@ -51,11 +51,11 @@
 		<img src="logotype.png" id="slider_logo">
 		<p>Хотите чего-то необычного? Тогда мы можем вам представить наш магазин сладостей, в котором собраны сладости со всего света. Мы предлагаем сладости из Америки, Кореи и Японии.</p>
 	</div>
-	<img src="s14.jpeg" class="slider_img_big minimized">
+	<img src="s14.jpeg" class="slider_img_big">
 	<div class="slider_div_with_img_small">
-		<img src="s2.jpeg" class="slider_img_small minimized">
-		<img src="s3.jpeg" class="slider_img_small minimized">
-		<img src="s4.jpeg" class="slider_img_small minimized">
+		<img src="s2.jpeg" class="slider_img_small">
+		<img src="s3.jpeg" class="slider_img_small">
+		<img src="s4.jpeg" class="slider_img_small">
 	</div>
 </div>
 <div class="div_about_company">
