--- a/japanese_sweets.html
+++ b/japanese_sweets.html
@@ -41,7 +41,7 @@
 	<div id="menu">
 		<a href="honey.html">Главная</a>
 		<a href="range.html">Ассортимент</a>
-		<a href="#">Подарочные боксы</a>
+		<a href="gift_boxes.html">Подарочные боксы</a>
 		<a href="#f">Контакты</a>
 	</div>
 </header>
@@ -53,26 +53,26 @@
 	<div class="products">
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="s7.jpeg" class="img_product img_product_crem img_product_smaller">
-				<p>Японские сладости</p>
+				<img src="as_j_1.jpg" class="img_product img_product_crem img_product_smaller">
+				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="s7.jpeg" class="img_product img_product_crem img_product_smaller">
-				<p>Японские сладости</p>
+				<img src="as_j_2.webp" class="img_product img_product_crem img_product_smaller">
+				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="s7.jpeg" class="img_product img_product_crem img_product_smaller">
-				<p>Японские сладости</p>
+				<img src="as_j_3.webp" class="img_product img_product_crem img_product_smaller">
+				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="s7.jpeg" class="img_product img_product_crem img_product_smaller">
-				<p>Японские сладости</p>
+				<img src="as_j_4.jpg" class="img_product img_product_crem img_product_smaller">
+				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
 	</div>
@@ -80,26 +80,26 @@
 	<div class="products">
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="s7.jpeg" class="img_product img_product_crem img_product_smaller">
-				<p>Японские сладости</p>
+				<img src="as_j_5.jpg" class="img_product img_product_crem img_product_smaller">
+				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="s7.jpeg" class="img_product img_product_crem img_product_smaller">
-				<p>Японские сладости</p>
+				<img src="as_j_6.jpg" class="img_product img_product_crem img_product_smaller">
+				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="s7.jpeg" class="img_product img_product_crem img_product_smaller">
-				<p>Японские сладости</p>
+				<img src="as_j_7.jpeg" class="img_product img_product_crem img_product_smaller">
+				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="s7.jpeg" class="img_product img_product_crem img_product_smaller">
-				<p>Японские сладости</p>
+				<img src="as_j_8.jpeg" class="img_product img_product_crem img_product_smaller">
+				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
 	</div>
