--- a/range.html
+++ b/range.html
@@ -41,7 +41,7 @@
 	<div id="menu">
 		<a href="honey.html">Главная</a>
 		<a href="range.html">Ассортимент</a>
-		<a href="#">Подарочные боксы</a>
+		<a href="gift_boxes.html">Подарочные боксы</a>
 		<a href="#f">Контакты</a>
 	</div>
 </header>
