--- a/range.html
+++ b/range.html
@@ -58,13 +58,13 @@
 			</a>
 		</div>
 		<div class="product_card">
-			<a href="#">
+			<a href="america_sweets.html">
 				<img src="b1.jpeg" class="img_product img_product_crem">
 				<p>Американские сладости</p>
 			</a>
 		</div>
 		<div class="product_card">
-			<a href="#">
+			<a href="vostok_sweets.html">
 				<img src="oriental.jpg" class="img_product img_product_crem">
 				<p>Восточные сладости</p>
 			</a>
