--- a/gift_boxes.html
+++ b/gift_boxes.html
@@ -60,7 +60,7 @@
 		</div>
 		<div class="box_card">
 			<a href="#">
-				<div class="hint" data-title="Нaполнение бокса 'Американские сладости'. В него входят: Шоколад, Мармелад, Печенье и все это привезено из Америки."><img src="box_america.jpg" class="img_box img_box_crem"></div>
+				<div class="hint" data-title="Нaполнение бокса 'Американские сладости'. В него входят: Шоколад, Мармелад, Печенье и все это привезено из Америки."><img src="s13.jpeg" class="img_box img_box_crem"></div>
 				<p>Подарочный бокс <br>"Американские сладости"</p>
 			</a>
 		</div>
