--- a/gift_boxes.html
+++ b/gift_boxes.html
@@ -97,6 +97,7 @@
 		</table>
 		<img src="footer_sweets.png" class="foot_img" style="transform: scale(-1, 1)">
 	</div>
+	<h3>Copyright © 2021 Miroshnichenko Olesya, Kryukova Elena. All Rights Reserved</h3>
 </footer>
 </body>
 </html>
