--- a/japanese_sweets.html
+++ b/japanese_sweets.html
@@ -52,7 +52,7 @@
 	</div>
 	<div class="products">
 		<div class="product_card product_card_smaller">
-			<a href="japanese_sweets.html">
+			<a href="product_info.html">
 				<img src="as_j_1.jpg" class="img_product img_product_crem img_product_smaller">
 				<p>Японские сладости<br>3 500тг</p>
 			</a>
