--- a/japanese_sweets.html
+++ b/japanese_sweets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HoneMood - японские сладости</title>
+	<title>HoneyMood - японские сладости</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="honey.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
