--- a/vostok_sweets.html
+++ b/vostok_sweets.html
@@ -72,7 +72,7 @@
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="vostok_sweets.html">
-				<img src="s7.jpeg" class="img_product img_product_crem img_product_smaller">
+				<img src="v_s1.jpg" class="img_product img_product_crem img_product_smaller">
 				<p>Восточные сладости<br>3 500тг</p>
 			</a>
 		</div>
@@ -93,13 +93,13 @@
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="vostok_sweets.html">
-				<img src="s7.jpeg" class="img_product img_product_crem img_product_smaller">
+				<img src="v_s2.jpg" class="img_product img_product_crem img_product_smaller">
 				<p>Восточные сладости<br>3 500тг</p>
 			</a>
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="vostok_sweets.html">
-				<img src="s7.jpeg" class="img_product img_product_crem img_product_smaller">
+				<img src="v_s3.jpeg" class="img_product img_product_crem img_product_smaller">
 				<p>Восточные сладости<br>3 500тг</p>
 			</a>
 		</div>
