--- a/japanese_sweets.html
+++ b/japanese_sweets.html
@@ -59,13 +59,13 @@
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="as_j_2.webp" class="img_product img_product_crem img_product_smaller">
+				<img src="k_s1.jpg" class="img_product img_product_crem img_product_smaller">
 				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="as_j_3.webp" class="img_product img_product_crem img_product_smaller">
+				<img src="k_s2.png" class="img_product img_product_crem img_product_smaller">
 				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
