--- a/japanese_sweets.html
+++ b/japanese_sweets.html
@@ -92,13 +92,13 @@
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="as_j_7.jpeg" class="img_product img_product_crem img_product_smaller">
+				<img src="k_s3.jpg" class="img_product img_product_crem img_product_smaller">
 				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
 		<div class="product_card product_card_smaller">
 			<a href="japanese_sweets.html">
-				<img src="as_j_8.jpeg" class="img_product img_product_crem img_product_smaller">
+				<img src="k_s4.jpg" class="img_product img_product_crem img_product_smaller">
 				<p>Японские сладости<br>3 500тг</p>
 			</a>
 		</div>
